# advent_of_code_2022

./: .pre-commit-config.yaml  README.md  pyproject.toml
solutions/: 00.py  01.py  02.py  03.py  04.py  05.py  06.py  07.py  10.py  11.py
